tests/valid/56332_if_then_else_printing_string/if_then_else_printing_string.agu
-- Author: 56332, Student Ricardo Sobral
let sinal (n) : Int -> String =
    if n >= 0 then "positivo" else "negativo"
let _ : Unit = print(sinal(0))