tests/invalid/56332_semantic_undeclared_variable/semantic_undeclared_variable.agu
-- Author: 56332, Student Ricardo Sobral
let sum (n) : Int -> Int = n + y  -- Erro semântico: variável 'y' não declarada
